--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "convert-vapid-public-key": "^1.1.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "server-only": "^0.0.1",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4",
+    "typescript": "4.9.5",
+    "web-push": "^3.5.0"
+  },
+  "devDependencies": {
+    "@types/web-push": "^3.3.2"
   }
 }
