--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "convert-vapid-public-key": "^1.1.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
